app/juice-deployment.yaml
# Juice App Deployment
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-cip
  namespace: juice-shop
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 3000
  selector:
    app: juice-shop
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: juice-shop
  name: juice-shop
  namespace: juice-shop
spec:
  selector:
    matchLabels:
      app: juice-shop
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop:v14.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 200Mi
      restartPolicy: Always
