app/juice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: cert-issuer
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
  name: juice-shop-ingress
  namespace: juice-shop
spec:
  rules:
  - host: juice-shop.your-domain
    http:
      paths:
      - backend:
          service:
            name: juice-shop-cip
            port:
              number: 443
        path: /?(.*)
        pathType: Prefix
  tls:
    - hosts:
        - juice-shop.your-domain
      secretName: tls-juice
